--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,12 +7,13 @@
   <title>WebSocket Streaming</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script type="text/javascript" src="./socket.io.dev.js"></script>
-
+  <link rel="stylesheet" href="./index.css">
 </head>
 
 <body>
   <video id="video" controls></video>
   <button id="triggerBtn">Start Streaming!</button>
+  
   <script type="text/javascript" charset="utf-8">
     var PORT = 5000;
     var DOMAIN = "127.0.0.1"
