Optimize user experience

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,6 +12,11 @@
 <body>
   <video id="video" controls></video>
   <button id="triggerBtn">Start Streaming!</button>
+  <div class="socket-container">
+    <button id="disconnectBtn">Disconnect</button>
+    <button id="connectBtn">Connect</button>
+    <div class="socket-status disconnected"></div>
+  </div>
   <script src="src/index.js"></script>
 </body>
 
